# samples

./: data.csv  pyproject.toml
.ipynb_checkpoints/: Sales Data-checkpoint.ipynb
