[tool.poetry]
name = "samples"
version = "0.1.0"
description = ""
authors = ["aiotrope <arneli74@protonmail.com>"]
license = "CC0 1.0 Universal"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.4.2"
numpy = "^1.22.4"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
